--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5",
+        "php": ">=5.5 <8.0",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
